Fix `register` and `login` pages on mobile devices

--- a/src/routes/register/styles.scss
+++ b/src/routes/register/styles.scss
@@ -15,17 +15,14 @@ h1 {
 }
 
 .form {
-  width: 24rem;
+  width: 30rem;
   background-color: rgba(255,255,255,0.1);
-  position: absolute;
-  transform: translate(-50%,-50%);
-  top: 50%;
-  left: 50%;
   border-radius: 10px;
   backdrop-filter: blur(10px);
   border: 2px solid rgba(255,255,255,0.1);
   box-shadow: 0 0 40px rgba(8,7,16,0.6);
   padding: 50px 35px;
+  box-sizing: border-box;
 }
 
 .form * {
@@ -72,4 +69,12 @@ button {
   font-weight: 600;
   border-radius: 5px;
   cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .form {
+    width: 100%;
+    border: none;
+    box-shadow: none;
+  }
 }
